<resources>
    <string name="app_name">Book exchanger</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="search_hint">Search books</string>
    <string name="signUpText">Don\'t have an account? Sign Up!</string>
    <string name="loginText">Already have an account? Sign In!</string>
    <string name="buttonLoginText">Login</string>
    <string name="buttonSignUpText">Sign Up</string>
    <string name="sign_up_failed">SignUp failed</string>
</resources>